--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="img/favicon-16x16.png">
     <title>Собираем ПК</title>
 
     <script src="https://cdn.jsdelivr.net/npm/seamless-scroll-polyfill@latest/lib/bundle.min.js"></script>
     <script src="js/accordion.js" defer></script>
     <script src="js/modale.js" defer></script>
     <script src="js/smoothScroll.js" defer></script>
+    <script src="js/timer.js" defer></script>
 </head>
 
 <body>
