--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="js/modale.js" defer></script>
     <script src="js/smoothScroll.js" defer></script>
     <script src="js/timer.js" defer></script>
+    <script src="js/sendForm.js" defer></script>
 </head>
 
 <body>
@@ -286,7 +287,7 @@
                 <div class="modal__input">
                     <input type="email" class="modal__input">
                 </div>
-                <button type="button" class="button modal__button">Отправить</button>
+                <button type="submit" class="button modal__button">Отправить</button>
             </div>
         </div>
     </form>
